# BasinCast

./: .gitignore  .gitkeep  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: fetch_meteo.py  home.py  run_basincast.py  run_core.py  run_core_v0_6.py  translator_app.py
app/pages/: 1_🚀_Run_BasinCast.py  2_📊_Dashboard.py  3_📘_Docs.py  4_👤_About.py  9_🛠_Advanced_BasinCast.py
app/paper_layer/: io_contract.py  model_selection.py  reporting.py  scenarios.py
outputs/: hello_output.csv
src/basincast/core/: __init__.py  backtest.py  features.py  forecast.py  metrics.py  pipeline.py  quality.py  train.py
src/basincast/demand/: open_demand.py
src/basincast/exog/: __init__.py  power.py
src/basincast/io/: validators.py
src/basincast/meteo/: geocode.py  power.py
src/basincast/scenarios/: __init__.py  cache.py  cmip6_intake_provider.py  delta_change.py  deltapack_provider.py  meteo_scenarios.py  scenario_deltas.py
src/basincast/translator/: __init__.py  i18n.py  infer.py  meteo.py  normalize.py  parsing.py  reader.py
tools/: .gitignore  build_cmip6_deltapack.py  check_open_demand.py  check_point_exog.py  dataverse_download.py  dataverse_probe.py  download_tethys_demand.py  zip_peek.py
