[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basincast"
version = "0.2.0"
description = "Climate-informed multi-horizon forecasting for regulated basins."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro Garcia-Monteagudo" }
]
dependencies = [
  "pandas",
  "numpy",
  "streamlit",
  "scikit-learn",
  "rapidfuzz",
  "plotly",
  "pydantic",
  "joblib",
  "openpyxl",
  "pyproj"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]